[package]
name = "warp_page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.6"
serde = "1.0.152"
serde_json = "1.0.91"
# tokio = "1.24.1"
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros"] }
warp = "0.3.3"
